k3s/forgejo/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-postgres
  namespace: alex-forgejo
  labels:
    app: forgejo-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-postgres
  template:
    metadata:
      labels:
        app: forgejo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: forgejo-postgres-pvc
