k3s/forgejo/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-postgres
  namespace: alex-forgejo
spec:
  selector:
    app: forgejo-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
