k3s/forgejo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo
  namespace: alex-forgejo
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
    - name: ssh
      protocol: TCP
      port: 22
      targetPort: 22
  type: ClusterIP
